# k8s-practice

./: Cargo.toml  README.md
pod/: CRD&控制器.md  Daemonset.md  job & cronjob.md  statefulset.md  声明式api.md  水平扩展.md  角色的权限控制 RBAC.md
src/: lib.rs
src/socks5/: mod.rs
src/tls/: mod.rs
