[package]
name = "async-tungstenite-agency"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["io-util", "macros"] }
tracing = "0.1.22"
futures-util = "0.3.8"
pin-project = "1.0.2"
rustls = "0.19.0"
webpki = "0.21.4"
webpki-roots = "0.21.0"
httparse = "1.3.4"
url = "2.2.0"
reqwest = { version = "0.10.10", default-features = false, features = [
    "json",
    "rustls-tls"
] }
serde = "1.0.118"
async-tungstenite = { version = "0.11.0", features = ["tokio-rustls"] }
